FORMSTMPL-2: Add templates management & creation

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
@@ -1,3 +1,15 @@
 # Plugin's keys
 module.provider=City Of Paris
 module.description=Module Forms Template
+
+adminFeature.manageTemplates.name=Step templates
+adminFeature.manageTemplates.description=Manage form step templates
+
+create_template.pageTitle=Create Template
+manageTemplates.title=Manage step templates
+manageTemplates.buttonAdd=Create Template
+manageTemplates.columnTitle=Title
+manageTemplates.columnDescription=Description
+manageTemplates.columnActions=Actions
+
+info.template.created=Template created
