--- a/webapp/WEB-INF/conf/plugins/forms-template.properties
+++ b/webapp/WEB-INF/conf/plugins/forms-template.properties
@@ -4,3 +4,6 @@
 # Default Labels for XPage
 forms-template.pageTitle=appointment-management
 forms-template.pagePathLabel=appointment-management
+
+# Paginator default value
+forms-template.itemsPerPage=50
