FORMSTMPL-2: Add template delete

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
@@ -12,4 +12,7 @@ manageTemplates.columnTitle=Title
 manageTemplates.columnDescription=Description
 manageTemplates.columnActions=Actions
 
+warning.deleteTemplate=Do you really want to delete this Template?
+
 info.template.created=Template created
+info.deleteTemplate.successful=Template deleted
