FORMSTMPL-5: add copy template feature

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
@@ -11,6 +11,7 @@ manageTemplates.buttonAdd=Create Template
 manageTemplates.columnTitle=Title
 manageTemplates.columnDescription=Description
 manageTemplates.columnActions=Actions
+manageTemplates.action.duplicateTemplate=Duplicate template
 
 warning.deleteTemplate=Do you really want to delete this Template?
 
