FORMSTMPL-5: cleanup messages

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
@@ -12,8 +12,14 @@ manageTemplates.columnTitle=Title
 manageTemplates.columnDescription=Description
 manageTemplates.columnActions=Actions
 manageTemplates.action.duplicateTemplate=Duplicate template
+manageTemplates.action.modify.name=Modify
+manageTemplates.action.exportTemplate=Export Template
+manageTemplates.action.deleteTemplate=Delete Template
 
 warning.deleteTemplate=Do you really want to delete this Template?
 
 info.template.created=Template created
 info.deleteTemplate.successful=Template deleted
+error.template.not.imported=Error while importing template
+error.template.not.copied=Error while copying template
+error.template.not.exported=Error while exporting template
