--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-forms-template</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <name>Lutece Forms template</name>
 
     <repositories>
@@ -46,6 +46,6 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-form-module-forms-template.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-form-module-forms-template.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-form-module-forms-template.git</url>
-        <tag>module-forms-template-1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
