FORMSTMPL-10 : RBAC Management

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
@@ -23,3 +23,15 @@ info.deleteTemplate.successful=Template deleted
 error.template.not.imported=Error while importing template
 error.template.not.copied=Error while copying template
 error.template.not.exported=Error while exporting template
+
+# Permissions
+permission.label.resourceType=(Forms) Step Template
+permission.label.create=Create a template
+permission.label.modify=Edit a template
+permission.label.delete=Delete a template
+
+# Actions
+action.modify.name=Edit a template
+action.delete.name=Delete a template
+action.copy.name=Copy a template
+action.download.name=Export a template
