LUT-27234 : New translation resources files for citelibre related plugins

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages.properties
@@ -1,37 +1,36 @@
 # Plugin's keys
 module.provider=City Of Paris
-module.description=Module Forms Template
+module.description=Forms Template Module
 
-adminFeature.manageTemplates.name=Step templates
+adminFeature.manageTemplates.name=Step Templates
 adminFeature.manageTemplates.description=Manage form step templates
 
-create_template.pageTitle=Create Template
-manageTemplates.title=Manage step templates
-manageTemplates.buttonAdd=Create Template
+create_template.pageTitle=Create a template
+manageTemplates.title=Manage form step templates
+manageTemplates.buttonAdd=Create a template
 manageTemplates.columnTitle=Title
 manageTemplates.columnDescription=Description
 manageTemplates.columnActions=Actions
 manageTemplates.action.duplicateTemplate=Duplicate template
 manageTemplates.action.modify.name=Modify
-manageTemplates.action.exportTemplate=Export Template
-manageTemplates.action.deleteTemplate=Delete Template
-
-warning.deleteTemplate=Do you really want to delete this Template?
+manageTemplates.action.exportTemplate=Export template
+manageTemplates.action.deleteTemplate=Delete template
+warning.deleteTemplate=Are you sure you want to delete this template?
 
 info.template.created=Template created
 info.deleteTemplate.successful=Template deleted
-error.template.not.imported=Error while importing template
-error.template.not.copied=Error while copying template
-error.template.not.exported=Error while exporting template
+error.template.not.imported=Error importing template
+error.template.not.copied=Error copying template
+error.template.not.exported=Error exporting template
 
 # Permissions
 permission.label.resourceType=(Forms) Step Template
 permission.label.create=Create a template
-permission.label.modify=Edit a template
+permission.label.modify=Modify a template
 permission.label.delete=Delete a template
 
 # Actions
-action.modify.name=Edit a template
+action.modify.name=Modify a template
 action.delete.name=Delete a template
-action.copy.name=Copy a template
+action.copy.name=Duplicate a template
 action.download.name=Export a template
